--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(TapServer)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(TapServer main.cpp)
+add_executable(TapServer main.cpp RPGServer.cpp RPGServer.h RPGServer.h RPGClient.cpp RPGClient.h DS.cpp DS.h GameClient.cpp GameClient.h)
 
 find_package(Threads REQUIRED)
 target_link_libraries(TapServer pthread)
